--- a/src/scss/components/ui/_form.scss
+++ b/src/scss/components/ui/_form.scss
@@ -1,7 +1,6 @@
 .input-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
 
   label {
     margin-bottom: map-get($spacers, 2);
@@ -11,36 +10,16 @@
   input {
     width: 100%;
     outline: 0;
-    border: 1px solid $textColor;
+    border: 1px solid $gray-600;
     border-radius: map-get($spacers, 1);
     padding: map-get($spacers, 1);
     background-color: $bodyColor;
     color: $textColor;
 
     &:focus {
+      border-color: $textColor;
       box-shadow: 0 0 0 4px transparentize($textColor, 0.65);
       background-color: $white;
     }
   }
-
-  // input {
-  //   padding: 0.6rem;
-  //   background-color: darken(#fff, 7);
-  //   border: none;
-  //   border: 1px solid lighten(#000, 60);
-  //   border-radius: 4px;
-  //   outline: none;
-  //   width: 100%;
-
-  //   &:focus {
-  //     background-color: darken(#fff, 10);
-  //     border: 1px solid lighten(#000, 42);
-  //   }
-  // }
-
-  // label {
-  //   margin-bottom: map-get($spacers, 1);
-  //   font-size: $h6-font-size;
-  //   margin-bottom: 0.6rem;
-  // }
 }
